# J.A.R.V.I.S.-local-agent

./: .env.example  .gitignore  Makefile  README.md  jarvis_rules.md  mcp_config.example.json  pyproject.toml
src/jarvis_backend/: agent.py  audio.py  config.py  main.py  mcp_manager.py  server.py  tools.py  triggers.py
static/: index.html
